Add persistence dependencies